[package]
name = "tokio_official_tutorial_code_minis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
mini-redis = "0.4.1"

bytes = "1"
# this is a very handy library
# it allows for asynchronous network requests to be handled via the "bytes" object
# The biggest feature it adds over Vec<u8> is shallow cloning. 
# In other words, calling clone() on a Bytes instance does not copy the underlying data. 
# Instead, a Bytes instance is a reference-counted handle to some underlying data. The Bytes type is roughly an Arc<Vec<u8>> but with some added capabilities.
# Meaning it allows for multiple ownership across threads :D

futures = "0.3.30"
# has various useful libraries/functions for implementing futures in rust
# used to create our own version of tokio, "mini-tokio", in section 10